--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "brain-games-poire",
   "version": "1.1.0",
   "description": "edu project",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
   },
-  "author": "",
+  "author": "Tatiana Poire",
   "license": "ISC",
+  "keywords": ["games", "eduacation", "console application"],
   "dependencies": {
     "readline-sync": "^1.4.9"
   },
