--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,9 +4,12 @@
 
   rules:
     no-console: 0
-    
+
   parser:
     babel-eslint
 
+  extends:
+    - eslint-config-airbnb-base
+    
   plugins:
     - babel
