--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "eduacation",
     "console application"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "readline-sync": "^1.4.9"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
@@ -24,8 +26,7 @@
     "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0",
-    "readline-sync": "^1.4.9"
+    "eslint-plugin-import": "^2.16.0"
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
