--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-poire",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "edu project",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -31,8 +31,8 @@
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/games/brain-calc.js"
+    "brain-even": "dist/src/brain-even.js",
+    "brain-calc": "dist/src/brain-calc.js"
   },
   "files": [
     "dist"
