--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/src/brain-even.js",
-    "brain-calc": "dist/src/brain-calc.js"
+    "brain-calc": "dist/src/brain-calc.js",
+    "brain-calc": "dist/src/brain-gcd.js"
   },
   "files": [
     "dist"
