--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-poire",
-  "version": "1.4.5",
+  "version": "1.5.7",
   "description": "edu project",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -35,7 +35,7 @@
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
     "brain-progression": "dist/bin/brain-progression.js",
-    "brain-progression": "dist/bin/brain-prime.js"
+    "brain-prime": "dist/bin/brain-prime.js"
   },
   "files": [
     "dist"
